--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "vite-plugin-vuetify": "^2.0.3",
+    "vuetify": "^3.5.14"
   }
 }
